Fix horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -603,7 +603,7 @@ footer {
   padding: 11em 0 8em;
   position: relative; }
   footer svg.separator {
-    width: 100vw;
+    width: 100%;
     height: auto;
     position: absolute;
     top: -5px;
@@ -767,7 +767,7 @@ footer {
         bottom: -20vh;
         max-width: 60%; } }
   .portfolio-top .divider {
-    width: 100vw;
+    width: 100%;
     height: auto;
     position: absolute;
     top: 99.9%;
