--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,7 +5,7 @@ footer {
   position: relative;
 
   svg.separator {
-    width: 100vw;
+    width: 100%;
     height: auto;
     position: absolute;
     top: -5px;
