--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -143,7 +143,7 @@
   }
 
   .divider {
-    width: 100vw;
+    width: 100%;
     height: auto;
     position: absolute;
     top: 99.9%;
